fix overlay not centered issue; improve buttons&overlay ui

--- a/style/cell.scss
+++ b/style/cell.scss
@@ -168,3 +168,9 @@
     font-size: 35px;
   }
 }
+
+@media(max-width: 450px) {
+  .cell.cell.cell {
+    font-size: 1.5em;
+  }
+}
